// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.google.firebase.inappmessaging.internal;

option java_package = "com.google.firebase.inappmessaging.internal";
option java_outer_classname = "RateLimitProto";

// Actions performed on the in app message
message RateLimit {
  // map from limiter key to counter
  map<string, Counter> limits = 1;
}

message Counter {
  // value of the counter
  int64 value = 1;

  // time at which the counter was initiated
  int64 start_time_epoch = 2;
}
